[package]
name = "warp-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
solana-client = "2.0.4"
axum = "0.7.5"
solana-program = "2.0.4"
dotenv = "0.15.0"
